[gd_scene load_steps=43 format=2]

[ext_resource path="res://Assets/textures/Background.tscn" type="PackedScene" id=1]
[ext_resource path="res://Assets/sound/menu_button_click _trimmed.mp3" type="AudioStream" id=2]
[ext_resource path="res://GameFlow/dialogue_displayer.gd" type="Script" id=3]
[ext_resource path="res://GameFlow/command_methods_scripts/intro_dialogue.gd" type="Script" id=4]
[ext_resource path="res://GameFlow/DialogueScenesContent/DialogueDisplayerFont.tres" type="DynamicFont" id=5]
[ext_resource path="res://Node/graph_node.gd" type="Script" id=6]
[ext_resource path="res://Assets/textures/planets/EarthAtlas.png" type="Texture" id=7]
[ext_resource path="res://GameFlow/moving_sprite_texture.gd" type="Script" id=8]
[ext_resource path="res://Assets/textures/planets/MoonPlanetRotation.png" type="Texture" id=9]
[ext_resource path="res://Node/hightlight_node_with_frequency_and_bool.gdshader" type="Shader" id=10]
[ext_resource path="res://Assets/textures/station_explored.png" type="Texture" id=11]
[ext_resource path="res://Assets/textures/planets/GasGiant.png" type="Texture" id=12]
[ext_resource path="res://Assets/textures/planets/DarkRedClick.png" type="Texture" id=13]
[ext_resource path="res://Assets/textures/planets/RedLeftClick.png" type="Texture" id=14]
[ext_resource path="res://Assets/animations/ShipFlyingAround.tscn" type="PackedScene" id=15]
[ext_resource path="res://Node/EdgeHardcoded.tscn" type="PackedScene" id=16]
[ext_resource path="res://GameFlow/Tutorials/first_tutorial_select_planet.gd" type="Script" id=17]

[sub_resource type="StyleBoxFlat" id=1]
bg_color = Color( 0, 0, 0, 1 )
border_width_left = 10
border_width_top = 10
border_width_right = 10
border_width_bottom = 10
border_color = Color( 0.615686, 0.615686, 0.615686, 1 )
corner_radius_top_left = 10
corner_radius_top_right = 10
corner_radius_bottom_right = 10
corner_radius_bottom_left = 10
corner_detail = 16

[sub_resource type="StyleBoxEmpty" id=15]

[sub_resource type="StyleBoxEmpty" id=13]

[sub_resource type="StyleBoxEmpty" id=16]

[sub_resource type="StyleBoxEmpty" id=14]

[sub_resource type="Theme" id=12]
Button/colors/font_color = Color( 0.88, 0.88, 0.88, 1 )

[sub_resource type="StyleBoxEmpty" id=9]

[sub_resource type="StyleBoxEmpty" id=10]

[sub_resource type="StyleBoxEmpty" id=11]

[sub_resource type="StyleBoxEmpty" id=8]

[sub_resource type="Animation" id=3]
resource_name = "ShowText"
tracks/0/type = "value"
tracks/0/path = NodePath("MarginContainer/VBoxContainer/DialogueText:percent_visible")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 1 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ 0.0, 1.0 ]
}

[sub_resource type="Shader" id=17]
code = "shader_type canvas_item;

uniform float blur_amount : hint_range(0, 200);

void fragment() {
	COLOR = textureLod(SCREEN_TEXTURE, SCREEN_UV, blur_amount);
}
"

[sub_resource type="ShaderMaterial" id=18]
shader = SubResource( 17 )
shader_param/blur_amount = 0.0

[sub_resource type="CircleShape2D" id=19]
radius = 39.3722

[sub_resource type="ShaderMaterial" id=20]
resource_local_to_scene = true
shader = ExtResource( 10 )
shader_param/assigned_color = Plane( 1, 1, 1, 1 )
shader_param/WHITE = Plane( 1, 1, 1, 0.2 )
shader_param/FREQ = 3.0
shader_param/highlight = 0.0
shader_param/amplitude = 0.1

[sub_resource type="Animation" id=22]
resource_name = "ClickNode"
length = 2.0
tracks/0/type = "value"
tracks/0/path = NodePath("MouseButtonLeft:position")
tracks/0/interp = 2
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 1.1, 2 ),
"transitions": PoolRealArray( 2.92817, 1, 1.51572 ),
"update": 0,
"values": [ Vector2( 48, 72 ), Vector2( 44, 60 ), Vector2( 32, 48 ) ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("MouseButtonLeft:playing")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0, 0.2, 2 ),
"transitions": PoolRealArray( 1, 1, 1 ),
"update": 1,
"values": [ false, true, true ]
}

[sub_resource type="Animation" id=23]
resource_name = "NodeBeingSelected"
length = 1.5
tracks/0/type = "value"
tracks/0/path = NodePath("Sprite/StationSimple:self_modulate")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 1.5 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ Color( 1, 1, 1, 0 ), Color( 1, 1, 1, 1 ) ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("Sprite/StationSimple:visible")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0, 0.1 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 1,
"values": [ false, true ]
}

[sub_resource type="Animation" id=24]
length = 0.001

[sub_resource type="SpriteFrames" id=26]
animations = [ {
"frames": [ ExtResource( 14 ), ExtResource( 13 ) ],
"loop": true,
"name": "default",
"speed": 5.0
} ]

[sub_resource type="ShaderMaterial" id=27]
resource_local_to_scene = true
shader = ExtResource( 10 )
shader_param/assigned_color = Plane( 1, 1, 1, 1 )
shader_param/WHITE = Plane( 1, 1, 1, 0.2 )
shader_param/FREQ = 3.0
shader_param/highlight = 0.0
shader_param/amplitude = 0.1

[sub_resource type="ShaderMaterial" id=29]
resource_local_to_scene = true
shader = ExtResource( 10 )
shader_param/assigned_color = Plane( 1, 1, 1, 1 )
shader_param/WHITE = Plane( 1, 1, 1, 0.2 )
shader_param/FREQ = 3.0
shader_param/highlight = 0.0
shader_param/amplitude = 0.1

[sub_resource type="Animation" id=30]
resource_name = "ClickNode"
length = 2.0
tracks/0/type = "value"
tracks/0/path = NodePath("MouseButtonLeft:position")
tracks/0/interp = 2
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 1.1, 2 ),
"transitions": PoolRealArray( 2.92817, 1, 1.51572 ),
"update": 0,
"values": [ Vector2( 48, 72 ), Vector2( 44, 60 ), Vector2( 32, 48 ) ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("MouseButtonLeft:playing")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0, 0.2, 2 ),
"transitions": PoolRealArray( 1, 1, 1 ),
"update": 1,
"values": [ false, true, true ]
}

[sub_resource type="Animation" id=31]
resource_name = "NodeBeingSelected"
length = 1.5
tracks/0/type = "value"
tracks/0/path = NodePath("Sprite/StationSimple:self_modulate")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 1.5 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ Color( 1, 1, 1, 0 ), Color( 1, 1, 1, 1 ) ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("Sprite/StationSimple:visible")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0, 0.1 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 1,
"values": [ false, true ]
}

[sub_resource type="Animation" id=32]
length = 0.001

[sub_resource type="Animation" id=33]
resource_name = "WinAnimation"

[node name="TutorialNode" type="Node2D"]
script = ExtResource( 17 )

[node name="Background" parent="." instance=ExtResource( 1 )]

[node name="CanvasLayer" type="CanvasLayer" parent="."]

[node name="DialogueShower" type="PanelContainer" parent="CanvasLayer"]
anchor_left = 0.5
anchor_top = 1.0
anchor_right = 0.5
anchor_bottom = 1.0
margin_left = -781.5
margin_top = -486.0
margin_right = 781.5
margin_bottom = -108.0
custom_styles/panel = SubResource( 1 )
script = ExtResource( 3 )
dialogues_to_show = [ "Here are some red pandas expecting to be rescued.", "Visit each planet to rescue the red pandas in those planets", "The instructions I sent you mention stuff like Graphs, Nodes and Edges. The machine was programmed to interpret planets as nodes and routes as edges. The graph is a planetary system made of nodes and edges." ]
command_methods_script = ExtResource( 4 )

[node name="MarginContainer" type="MarginContainer" parent="CanvasLayer/DialogueShower"]
margin_left = 10.0
margin_top = 10.0
margin_right = 1553.0
margin_bottom = 368.0
custom_constants/margin_right = 20
custom_constants/margin_top = 15
custom_constants/margin_left = 20
custom_constants/margin_bottom = 15

[node name="VBoxContainer" type="VBoxContainer" parent="CanvasLayer/DialogueShower/MarginContainer"]
margin_left = 20.0
margin_top = 15.0
margin_right = 1523.0
margin_bottom = 343.0

[node name="DialogueText" type="Label" parent="CanvasLayer/DialogueShower/MarginContainer/VBoxContainer"]
margin_right = 1503.0
margin_bottom = 274.0
size_flags_horizontal = 3
size_flags_vertical = 7
custom_colors/font_color = Color( 0, 1, 0.0862745, 1 )
custom_fonts/font = ExtResource( 5 )
text = "Hello? DCC Station... Can you hear me? Copy...
we have not found any red pandas yet..."
autowrap = true

[node name="HBoxContainer" type="HBoxContainer" parent="CanvasLayer/DialogueShower/MarginContainer/VBoxContainer"]
margin_top = 278.0
margin_right = 1503.0
margin_bottom = 328.0
size_flags_vertical = 0
custom_constants/separation = 70

[node name="SkipButton" type="Button" parent="CanvasLayer/DialogueShower/MarginContainer/VBoxContainer/HBoxContainer"]
margin_right = 77.0
margin_bottom = 50.0
size_flags_horizontal = 2
custom_colors/font_color = Color( 0, 1, 0.0862745, 1 )
custom_fonts/font = ExtResource( 5 )
custom_styles/hover = SubResource( 15 )
custom_styles/pressed = SubResource( 13 )
custom_styles/focus = SubResource( 16 )
custom_styles/normal = SubResource( 14 )
text = "Skip"

[node name="NextButton" type="Button" parent="CanvasLayer/DialogueShower/MarginContainer/VBoxContainer/HBoxContainer"]
margin_left = 1415.0
margin_right = 1503.0
margin_bottom = 50.0
focus_previous = NodePath("../SkipButton")
focus_mode = 1
theme = SubResource( 12 )
custom_colors/font_color_focus = Color( 1, 1, 1, 1 )
custom_colors/font_color = Color( 0, 1, 0.0862745, 1 )
custom_colors/font_color_pressed = Color( 1, 1, 1, 1 )
custom_fonts/font = ExtResource( 5 )
custom_styles/hover = SubResource( 9 )
custom_styles/pressed = SubResource( 10 )
custom_styles/focus = SubResource( 11 )
custom_styles/normal = SubResource( 8 )
text = "Next"
align = 2

[node name="TextShowerAnimation" type="AnimationPlayer" parent="CanvasLayer/DialogueShower"]
anims/ShowText = SubResource( 3 )

[node name="ConfirmActionAudio" type="AudioStreamPlayer" parent="CanvasLayer/DialogueShower"]
stream = ExtResource( 2 )
volume_db = -10.0

[node name="ColorRect" type="ColorRect" parent="."]
material = SubResource( 18 )
margin_right = 1920.0
margin_bottom = 1080.0
mouse_filter = 2

[node name="Planet1" type="KinematicBody2D" parent="ColorRect"]
position = Vector2( 504, 176 )
input_pickable = true
script = ExtResource( 6 )
index = 2

[node name="Area2D" type="Area2D" parent="ColorRect/Planet1"]

[node name="CollisionShape2D" type="CollisionShape2D" parent="ColorRect/Planet1/Area2D"]
shape = SubResource( 19 )

[node name="Sprite" type="Node2D" parent="ColorRect/Planet1"]
material = SubResource( 20 )

[node name="StationSimple" type="Sprite" parent="ColorRect/Planet1/Sprite"]
visible = false
self_modulate = Color( 1, 1, 1, 0 )
use_parent_material = true
position = Vector2( 0, -1.43051e-06 )
scale = Vector2( 0.479042, 0.479042 )
z_index = 1
texture = ExtResource( 11 )

[node name="SpriteTexture" type="Sprite" parent="ColorRect/Planet1/Sprite"]
use_parent_material = true
z_index = -1
texture = ExtResource( 7 )
hframes = 4
script = ExtResource( 8 )

[node name="AnimationPlayer" type="AnimationPlayer" parent="ColorRect/Planet1"]
anims/ClickNode = SubResource( 22 )
anims/NodeBeingSelected = SubResource( 23 )
anims/RESET = SubResource( 24 )

[node name="MouseButtonLeft" type="AnimatedSprite" parent="ColorRect/Planet1"]
visible = false
position = Vector2( 48, 72 )
frames = SubResource( 26 )
speed_scale = 0.5

[node name="Planet2" type="KinematicBody2D" parent="ColorRect"]
position = Vector2( 1144, 168 )
input_pickable = true
script = ExtResource( 6 )
index = 1

[node name="Area2D" type="Area2D" parent="ColorRect/Planet2"]

[node name="CollisionShape2D" type="CollisionShape2D" parent="ColorRect/Planet2/Area2D"]
shape = SubResource( 19 )

[node name="Sprite" type="Node2D" parent="ColorRect/Planet2"]
material = SubResource( 27 )

[node name="SpriteTexture" type="Sprite" parent="ColorRect/Planet2/Sprite"]
use_parent_material = true
z_index = -1
texture = ExtResource( 12 )
hframes = 4
region_rect = Rect2( 0, 0, 80, 80 )

[node name="StationSimple" type="Sprite" parent="ColorRect/Planet2/Sprite"]
visible = false
self_modulate = Color( 1, 1, 1, 0 )
use_parent_material = true
position = Vector2( 0, -1.43051e-06 )
scale = Vector2( 0.479042, 0.479042 )
texture = ExtResource( 11 )

[node name="AnimationPlayer" type="AnimationPlayer" parent="ColorRect/Planet2"]
anims/ClickNode = SubResource( 22 )
anims/NodeBeingSelected = SubResource( 23 )
anims/RESET = SubResource( 24 )

[node name="MouseButtonLeft" type="AnimatedSprite" parent="ColorRect/Planet2"]
visible = false
position = Vector2( 32, 48 )
frames = SubResource( 26 )
speed_scale = 0.5
playing = true

[node name="StartingNode" type="KinematicBody2D" parent="ColorRect"]
position = Vector2( 800, 420 )
input_pickable = true
script = ExtResource( 6 )

[node name="Area2D" type="Area2D" parent="ColorRect/StartingNode"]

[node name="CollisionShape2D" type="CollisionShape2D" parent="ColorRect/StartingNode/Area2D"]
shape = SubResource( 19 )

[node name="Sprite" type="Node2D" parent="ColorRect/StartingNode"]
material = SubResource( 29 )

[node name="StationSimple" type="Sprite" parent="ColorRect/StartingNode/Sprite"]
use_parent_material = true
position = Vector2( 0, -1.43051e-06 )
scale = Vector2( 0.479042, 0.479042 )
z_index = 1
texture = ExtResource( 11 )

[node name="SpriteTexture" type="Sprite" parent="ColorRect/StartingNode/Sprite"]
use_parent_material = true
position = Vector2( 0, -4 )
z_index = -1
texture = ExtResource( 9 )
hframes = 4
region_rect = Rect2( 0, 0, 80, 80 )

[node name="AnimationPlayer" type="AnimationPlayer" parent="ColorRect/StartingNode"]
anims/ClickNode = SubResource( 30 )
anims/NodeBeingSelected = SubResource( 31 )
anims/RESET = SubResource( 32 )

[node name="MouseButtonLeft" type="AnimatedSprite" parent="ColorRect/StartingNode"]
visible = false
position = Vector2( 48, 72 )
frames = SubResource( 26 )
speed_scale = 0.5

[node name="ShipFlyingAroundCenter" parent="ColorRect/StartingNode" instance=ExtResource( 15 )]
scale = Vector2( 0.2, 0.2 )
radius = 350.0
angle = 0.0
rotation_speed_factor = 2.5

[node name="Edge1S" parent="ColorRect" instance=ExtResource( 16 )]
weight = 0.0
nodeA = NodePath("../Planet1")
nodeB = NodePath("../StartingNode")

[node name="Edge2S" parent="ColorRect" instance=ExtResource( 16 )]
weight = 0.0
nodeA = NodePath("../Planet2")
nodeB = NodePath("../StartingNode")

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
anims/WinAnimation = SubResource( 33 )

[connection signal="button_up" from="CanvasLayer/DialogueShower/MarginContainer/VBoxContainer/HBoxContainer/SkipButton" to="CanvasLayer/DialogueShower" method="_on_SkipButton_button_up"]
[connection signal="button_up" from="CanvasLayer/DialogueShower/MarginContainer/VBoxContainer/HBoxContainer/NextButton" to="CanvasLayer/DialogueShower" method="_on_NextButton_button_up"]
[connection signal="input_event" from="ColorRect/Planet1/Area2D" to="ColorRect/Planet1" method="_on_Area2D_input_event"]
[connection signal="mouse_entered" from="ColorRect/Planet1/Area2D" to="ColorRect/Planet1" method="_on_Area2D_mouse_entered"]
[connection signal="mouse_exited" from="ColorRect/Planet1/Area2D" to="ColorRect/Planet1" method="_on_Area2D_mouse_exited"]
[connection signal="input_event" from="ColorRect/Planet2/Area2D" to="ColorRect/Planet2" method="_on_Area2D_input_event"]
[connection signal="mouse_entered" from="ColorRect/Planet2/Area2D" to="ColorRect/Planet2" method="_on_Area2D_mouse_entered"]
[connection signal="mouse_exited" from="ColorRect/Planet2/Area2D" to="ColorRect/Planet2" method="_on_Area2D_mouse_exited"]
[connection signal="input_event" from="ColorRect/StartingNode/Area2D" to="ColorRect/StartingNode" method="_on_Area2D_input_event"]
[connection signal="mouse_entered" from="ColorRect/StartingNode/Area2D" to="ColorRect/StartingNode" method="_on_Area2D_mouse_entered"]
[connection signal="mouse_exited" from="ColorRect/StartingNode/Area2D" to="ColorRect/StartingNode" method="_on_Area2D_mouse_exited"]
